solve run time error of color in myapplet